# s3v

./: .gitignore  README.md  pyproject.toml
s3v/: aws.py  ls.py  misc.py  versions.py
s3v/cli/: main.py
